<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2" >

    <Button
        android:id="@+id/button2"
        style="@style/Guzik"
        android:text="@string/Kalendarz"
        android:layout_alignTop="@+id/editText2"
        android:layout_marginTop="40dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginLeft="77dp"
        />

    <TextView
        android:id="@+id/textView11"
        style="@style/Napis"
        android:text="@string/lista_kat"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginTop="105dp"
        android:layout_marginLeft="15dp"
        />
    
    <TextView
        android:id="@+id/textView12"
        style="@style/Napis"
        android:text="@string/Podkategoria"
        android:layout_alignTop="@+id/textView4"
        android:layout_marginTop="155dp"
        android:layout_marginLeft="15dp"
        />

    <Spinner
        android:id="@+id/kategorie_spinner"
        style="@style/ListaWysuwana"
        android:entries="@array/lista_kategorii"
        android:prompt="@string/kateg"
        android:layout_alignTop="@+id/button2"
        android:layout_marginTop="100dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginLeft="70dp"
        />

    <Button
        android:id="@+id/button3"
        style="@style/Guzik"
        android:layout_centerHorizontal="true"
        android:text="@string/Zatwierdz"
        android:layout_alignTop="@+id/kategorie_spinner"
        android:layout_marginTop="110dp"
        />
    
    <Button
        android:id="@+id/button4"
        style="@style/Guzik"
        android:text="@string/Plus"
        android:layout_width="40dp"
        android:layout_alignTop="@+id/kategorie_spinner"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="275dp"
        />
    
    <Button
        android:id="@+id/Lupka"
        style="@style/Guzik"
        android:text="@string/L"
        android:layout_width="40dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="280dp"
        android:layout_height="40dp"
        android:textSize="20dp"
        />
    
    <TextView
        android:id="@+id/Podkategoria"
        style="@style/PasekSzary"
        android:text=""
        android:layout_alignTop="@+id/button2"
        android:layout_marginTop="150dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginLeft="90dp"
        />

    <TextView
        android:id="@+id/textView4"
        style="@style/Napis"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginTop="40dp"
        android:text="@string/Data" />


    <TextView
        android:id="@+id/textView2"
        style="@style/Tytul"
        android:text="@string/Nazwa" />

    <TextView
        android:id="@+id/textView1"
        style="@style/Napis"
        android:layout_marginTop="50dp"
        android:text="@string/Nazwa1" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Napis"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginTop="40dp"
        android:text="@string/Cena" />

    <EditText
        android:id="@+id/editText1"
        style="@style/Pasek"
        android:layout_marginTop="50dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginLeft="80dp"
        android:inputType="text"
         />
    
    <EditText
        android:id="@+id/editText2"
        style="@style/Pasek"
		android:layout_marginTop="90dp"
		android:layout_alignLeft="@+id/textView4"
		android:layout_marginLeft="80dp"
        android:inputType="number"
         />

</RelativeLayout>