<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture" >

    <Button
        android:id="@+id/button1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/myshape"
        android:focusableInTouchMode="true"
        android:text="@string/DodajWydatek"
        android:textColor="#fbfbfb"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button1"
        android:layout_marginTop="45dp"
        android:background="@drawable/myshape"
        android:text="@string/ZobaczRaport"
        android:textColor="#fbfbfb"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/myshape"
        android:text="@string/Statystyki"
        android:textColor="#fbfbfb"
        android:textSize="20dp" />

</RelativeLayout>